Src/Newt/NewtonDynamics_153/NewtonSource/bin/Newton_153.h

	NEWTON_API unsigned NewtonMaterialGetBodyCollisionID (const NewtonMaterial* material, const NewtonBody* body);