Src/Newt/NewtonDynamics/Import/DllImports.cs


		// material definitions that can not be overwritten in function callback
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMaterialGetUserData(IntPtr newtonWorld, int id0, int id1);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialSetSurfaceThickness(IntPtr newtonWorld, int id0, int id1, float thickness);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialSetContinuousCollisionMode(IntPtr newtonWorld, int id0, int id1, int state);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialSetCollisionCallback(IntPtr newtonWorld, int id0, int id1, IntPtr userData, NewtonOnAABBOverlap aabbOverlap, NewtonContactsProcess process);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialSetDefaultSoftness(IntPtr newtonWorld, int id0, int id1, float value);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialSetDefaultElasticity(IntPtr newtonWorld, int id0, int id1, float elasticCoef);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialSetDefaultCollidable(IntPtr newtonWorld, int id0, int id1, int state);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialSetDefaultFriction(IntPtr newtonWorld, int id0, int id1, float staticFriction, float kineticFriction);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonWorldGetFirstMaterial(IntPtr newtonWorld);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonWorldGetNextMaterial(IntPtr newtonWorld, IntPtr material);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonWorldGetFirstBody(IntPtr newtonWorld);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonWorldGetNextBody(IntPtr newtonWorld, IntPtr curBody);

		#endregion
		#region Physics Contact control functions

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMaterialGetMaterialPairUserData(IntPtr material);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern uint NewtonMaterialGetContactFaceAttribute(IntPtr material);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern uint NewtonMaterialGetBodyCollisionID(IntPtr material, IntPtr body);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonMaterialGetContactNormalSpeed(IntPtr material);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialGetContactForce(IntPtr material, IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] force);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialGetContactPositionAndNormal(IntPtr material, IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] posit, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] normal);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialGetContactTangentDirections(IntPtr material, IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] dir0, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] dir1);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonMaterialGetContactTangentSpeed(IntPtr material, int index);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialSetContactSoftness(IntPtr material, float softness);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialSetContactElasticity(IntPtr material, float restitution);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialSetContactFrictionState(IntPtr material, int state, int index);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialSetContactFrictionCoef(IntPtr material, float staticFrictionCoef, float kineticFrictionCoef, int index);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialSetContactNormalAcceleration(IntPtr material, float accel);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialSetContactNormalDirection(IntPtr material, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] directionVector);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialSetContactTangentAcceleration(IntPtr material, float accel, int index);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialContactRotateTangentDirections(IntPtr material, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] directionVector);

		#endregion

		#region convex collision primitives creation functions

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateNull(IntPtr newtonWorld);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateSphere(IntPtr newtonWorld, float radiusX, float radiusY, float radiusZ, int shapeID, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] offsetMatrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateBox(IntPtr newtonWorld, float dx, float dy, float dz, int shapeID, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] offsetMatrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateCone(IntPtr newtonWorld, float radius, float height, int shapeID, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] offsetMatrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateCapsule(IntPtr newtonWorld, float radius, float height, int shapeID, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] offsetMatrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateCylinder(IntPtr newtonWorld, float radius, float height, int shapeID, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] offsetMatrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateChamferCylinder(IntPtr newtonWorld, float radius, float height, int shapeID, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] offsetMatrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateConvexHull(IntPtr newtonWorld, int count, [MarshalAs(UnmanagedType.LPArray /* SizeConst = 180000*/)]float[,] vertexCloud, int strideInBytes, float tolerance, int shapeID, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] offsetMatrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateConvexHullFromMesh(IntPtr newtonWorld, IntPtr mesh, float tolerance, int shapeID);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateConvexHullModifier(IntPtr newtonWorld, IntPtr convexHullCollision, int shapeID);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonConvexHullModifierGetMatrix(IntPtr convexHullCollision, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonConvexHullModifierSetMatrix(IntPtr convexHullCollision, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrix);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonCollisionIsTriggerVolume(IntPtr convexCollision);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonCollisionSetAsTriggerVolume(IntPtr convexCollision, int trigger);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonCollisionSetMaxBreakImpactImpulse(IntPtr convexHullCollision, float maxImpactImpulse);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonCollisionGetMaxBreakImpactImpulse(IntPtr convexHullCollision);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonCollisionSetUserID(IntPtr convexCollision, uint id);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern uint NewtonCollisionGetUserID(IntPtr convexCollision);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonConvexHullGetFaceIndices(IntPtr convexHullCollision, int face, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = 3*/)]int[] faceIndices);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonConvexCollisionCalculateVolume(IntPtr convexCollision);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonConvexCollisionCalculateInertialMatrix(IntPtr convexCollision, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] inertia, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] origin);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonCollisionMakeUnique(IntPtr newtonWorld, IntPtr collision);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonReleaseCollision(IntPtr newtonWorld, IntPtr collision);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonAddCollisionReference(IntPtr collision);

		#endregion
		#region mass/spring/damper collision shape

		//	internal static extern IntPtr NewtonCreateSoftShape (IntPtr newtonWorld);
		//	internal static extern void NewtonSoftBodySetMassCount (IntPtr convexCollision, int count);
		//	internal static extern void NewtonSoftBodySetSpringCount (IntPtr convexCollision, int count);

		//	internal static extern void NewtonSoftBodySetMass (IntPtr convexCollision, int index, dFloat mass, dFloat* position);
		//	internal static extern int NewtonSoftBodySetSpring (IntPtr convexCollision, int index, int mass0, int mass1, dFloat stiffness, dFloat damper);
		//	internal static extern int NewtonSoftBodyGetMassArray (IntPtr convexCollision, dFloat* masses, dFloat** positions);	

		#endregion
		#region complex collision primitives creation functions
